# dio

./: .env.example  .gitignore  Cargo.toml
dio-cli/: Cargo.toml
dio-cli/src/: app.rs  backend.rs  db.rs  lib.rs  main.rs  server.rs  ui.rs  util.rs
dio-cli/src/archive/: cronjob.rs  dioerrors.rs  hashfile.rs  test.rs  testcases.rs
dio-local/: Cargo.toml
dio-local/src/: errors.rs  lib.rs
dio-server/: Cargo.toml  README.md  build.toml
dio-server/src/: db.rs  lib.rs  main.rs  model.rs  route.rs  util.rs
