[package]
name = "dio-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.0.29", features = ["derive"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"
