[package]
name = "dio-cli"
version = "0.1.0"
authors = [""]
edition = "2021"
description = """
A library to build rich terminal user interfaces or dashboards
"""
documentation = "https://github.com/lloydlobo/dio"
keywords = ["tui", "terminal", "dashboard"]
repository = "https://github.com/lloydlobo/dio"
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
autoexamples = true
categories = ["Command line tools"]
# rust-version = "1.56.1"

[badges]

[features]
default = ["crossterm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
crossterm = { version = "0.25.0", optional = true }
termion = { version = "2.0.1", optional = true }
tui = "0.19.0"
argh = "0.1"
rand = "0.8.5"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.23"
rayon = "1.6.1"

[dev-dependencies]
