[package]
name = "dio-server"
version = "0.1.0"
edition = "2021"
description = "Backend service for Dio"
repository = "https://github.com/lloydlobo/dio"
homepage = "https://github.com/lloydlobo/dio"
documentation = "https://github.com/lloydlobo/dio"
keywords = ["tui", "cli", "terminal"]
categories = ["Network"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.68"
bson = { version = "2.4.0", features = ["chrono"] }
cargo-modules = "0.7.1"
chrono = "0.4.23"
cron = "0.12.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.25"
litcrypt = "0.3.0"
mongodb = "2.3.1"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"
